# hybrid_activity_recognition

./: .gitignore  ANALISE_patchtst_hf_vs_oficial.md  NOTEBOOK_VS_MODULAR.md  Não confirmado 727826.crdownload  PLAN_PRETRAINING_ABLATIONS.md  PLAN_experiments_patchtst.md  PLAN_modular_hybrid.md  PLAN_raw_input_hybrid.md  README.md  REVIEW_hybrid_paper.md  ROADMAP_IMPLEMENTACAO.md  actbecalf-windowed.ipynb  experiment.out  patchtst_contexto_interno_2026-04-14.md  patchtst_study.md  plano codex.md  plano_opus.md  requirements.txt
hugging/: __init__.py
pretrain_ablations/: .gitignore  dataset_registry.yaml  pyproject.toml  requirements.txt
pretrain_ablations/configs/: base.yaml  har_mae_ptst_freeze.yaml  har_simclr_cnn_freeze.yaml  har_sup_cnn_tfc.yaml  har_sup_patchtsmixer.yaml  har_sup_patchtst.yaml  har_sup_resnet1d.yaml  har_tfc_cnn_freeze.yaml
pretrain_ablations/configs/smoke/: run_all_smoke.sh  smoke_base.yaml
pretrain_ablations/exploracao/: diagnostics.py  plot_timeseries_channels.py  sanity_check_pt.py  tsne_imu_windows.py
pretrain_ablations/preprocess/: export_actbecalf.py  export_dog.py  export_etth_slice.py  export_har_tfc.py
pretrain_ablations/results/: summary.csv
pretrain_ablations/src/pretrain_ablations/: __init__.py  config.py  experiment.py
pretrain_ablations/src/pretrain_ablations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pretrain_ablations/src/pretrain_ablations/datasets/: loader.py  registry.py
pretrain_ablations/src/pretrain_ablations/downstream/: heads.py
pretrain_ablations/utils/: __init__.py
(+111 files in other folders)
